name: HSuperBible6
version: 0.1.0.0
synopsis: Examples from the OpenGL SuperBible (6th ed.) in Haskell
-- description:         
license: BSD3
license-file: LICENSE
author: Sven Panne
maintainer: Sven Panne <svenpanne@gmail.com>
category: Graphics
build-type: Simple
-- extra-source-files:  
cabal-version: >=1.10

executable HSuperBible6
  main-is: Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends: base >=4.7 && <5
  hs-source-dirs: src
  default-language: Haskell2010
