name: HSuperBible6
version: 0.1.0.0
synopsis: Examples from the OpenGL SuperBible (6th ed.) in Haskell
description: All the examples from the OpenGL SuperBible (6th ed.) in Haskell.
license: BSD3
license-file: LICENSE
author: Sven Panne
maintainer: Sven Panne <svenpanne@gmail.com>
category: Graphics
build-type: Simple
cabal-version: >=1.10

library
  exposed-modules:
    SB6
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: src/SB6
  default-language: Haskell2010
  ghc-options: -Wall

executable SimpleClear
  main-is: SimpleClear.hs
  build-depends: base >= 3 && < 5, HSuperBible6
  hs-source-dirs: src/SimpleClear
  default-language: Haskell2010
  ghc-options: -Wall

executable SinglePoint
  main-is: SinglePoint.hs
  build-depends: base >= 3 && < 5, HSuperBible6
  hs-source-dirs: src/SinglePoint
  default-language: Haskell2010
  ghc-options: -Wall

source-repository head
  type: git
  location: https://github.com/svenpanne/HSuperBible6.git
