name: HSuperBible6
version: 0.1.0.0
synopsis: Examples from the OpenGL SuperBible (6th ed.) in Haskell
description: All the examples from the OpenGL SuperBible (6th ed.) in Haskell.
license: BSD3
license-file: LICENSE
author: Sven Panne
maintainer: Sven Panne <svenpanne@gmail.com>
category: Graphics
build-type: Simple
cabal-version: >=1.10

flag debug
  default: False
  description: Add debug code

library
  exposed-modules:
    SB6
  build-depends: base >= 3 && < 5, time, GLUT, OpenGLRaw
  hs-source-dirs: src/SB6
  default-language: Haskell2010
  ghc-options: -Wall
  other-extensions: CPP
  if flag(debug)
    cpp-options: "-DDEBUG"
  if os(darwin)
    cpp-options: "-DOS_DARWIN"
  if os(windows)
    cpp-options: "-DOS_WINDOWS"
    if arch(i386)
      cpp-options: "-DCALLCONV=stdcall"
    else
      cpp-options: "-DCALLCONV=ccall"
  else
    cpp-options: "-DCALLCONV=ccall"

executable SimpleClear
  main-is: SimpleClear.hs
  build-depends: base >= 3 && < 5, HSuperBible6, OpenGLRaw
  hs-source-dirs: src/SimpleClear
  default-language: Haskell2010
  ghc-options: -Wall

executable SinglePoint
  main-is: SinglePoint.hs
  build-depends: base >= 3 && < 5, HSuperBible6, OpenGL >= 2.11, OpenGLRaw
  hs-source-dirs: src/SinglePoint
  default-language: Haskell2010
  ghc-options: -Wall

executable SingleTri
  main-is: SingleTri.hs
  build-depends: base >= 3 && < 5, HSuperBible6, OpenGL >= 2.11, OpenGLRaw
  hs-source-dirs: src/SingleTri
  default-language: Haskell2010
  ghc-options: -Wall

executable MovingTri
  main-is: MovingTri.hs
  build-depends: base >= 3 && < 5, HSuperBible6, OpenGL >= 2.11, OpenGLRaw
  hs-source-dirs: src/MovingTri
  default-language: Haskell2010
  ghc-options: -Wall

executable TessellatedTri
  main-is: TessellatedTri.hs
  build-depends: base >= 3 && < 5, HSuperBible6, OpenGL >= 2.11, OpenGLRaw
  hs-source-dirs: src/TessellatedTri
  default-language: Haskell2010
  ghc-options: -Wall

executable TessellatedGSTri
  main-is: TessellatedGSTri.hs
  build-depends: base >= 3 && < 5, HSuperBible6, OpenGL >= 2.11, OpenGLRaw
  hs-source-dirs: src/TessellatedGSTri
  default-language: Haskell2010
  ghc-options: -Wall

executable FragColorFromPos
  main-is: FragColorFromPos.hs
  build-depends: base >= 3 && < 5, HSuperBible6, OpenGL >= 2.11, OpenGLRaw
  hs-source-dirs: src/FragColorFromPos
  default-language: Haskell2010
  ghc-options: -Wall

source-repository head
  type: git
  location: https://github.com/svenpanne/HSuperBible6.git
