name: HSuperBible7
version: 0.1.0.1
synopsis: Examples from the OpenGL SuperBible (7th ed.) in Haskell
description: All the examples from the OpenGL SuperBible (7th ed.) in Haskell.
copyright: Copyright (C) 2015-2016 Sven Panne
license: BSD3
license-file: LICENSE
author: Sven Panne
maintainer: Sven Panne <svenpanne@gmail.com>
category: Graphics
build-type: Simple
cabal-version: >=1.10

library
  exposed-modules:
    SB7
    SB7.Application
    SB7.Object
    SB7.SB7M
    SB7.Shader
  other-modules:
    SB7.DataType
  build-depends:
    GLUT                 >= 2.7    && < 2.8,
    OpenGL               >= 2.13.1 && < 3.1,
    OpenGLRaw            >= 2.5    && < 3.1,
    array                >= 0.1    && < 0.6,
    base                 >= 3      && < 5,
    binary               >= 0.5    && < 0.9,
    bytestring           >= 0.9    && < 0.11,
    optparse-applicative >= 0.11   && < 0.13,
    time                 >= 1.0    && < 1.7,
    transformers         >= 0.2    && < 0.6
  hs-source-dirs: src/SB7
  default-language: Haskell2010
  ghc-options: -Wall
  other-extensions: CPP
  if os(windows)
    cpp-options: "-DOS_WINDOWS"
    if arch(i386)
      cpp-options: "-DCALLCONV=stdcall"
    else
      cpp-options: "-DCALLCONV=ccall"
  else
    cpp-options: "-DCALLCONV=ccall"

executable SimpleClear
  main-is: SimpleClear.hs
  build-depends: base >= 3 && < 5, HSuperBible7
  hs-source-dirs: src/SimpleClear
  default-language: Haskell2010
  ghc-options: -Wall

executable SinglePoint
  main-is: SinglePoint.hs
  build-depends: base >= 3 && < 5, HSuperBible7
  hs-source-dirs: src/SinglePoint
  default-language: Haskell2010
  ghc-options: -Wall

executable SingleTri
  main-is: SingleTri.hs
  build-depends: base >= 3 && < 5, HSuperBible7
  hs-source-dirs: src/SingleTri
  default-language: Haskell2010
  ghc-options: -Wall

executable MovingTri
  main-is: MovingTri.hs
  build-depends: base >= 3 && < 5, HSuperBible7
  hs-source-dirs: src/MovingTri
  default-language: Haskell2010
  ghc-options: -Wall

executable TessellatedTri
  main-is: TessellatedTri.hs
  build-depends: base >= 3 && < 5, HSuperBible7
  hs-source-dirs: src/TessellatedTri
  default-language: Haskell2010
  ghc-options: -Wall

executable TessellatedGSTri
  main-is: TessellatedGSTri.hs
  build-depends: base >= 3 && < 5, HSuperBible7
  hs-source-dirs: src/TessellatedGSTri
  default-language: Haskell2010
  ghc-options: -Wall

executable FragColorFromPos
  main-is: FragColorFromPos.hs
  build-depends: base >= 3 && < 5, HSuperBible7
  hs-source-dirs: src/FragColorFromPos
  default-language: Haskell2010
  ghc-options: -Wall

source-repository head
  type: git
  location: https://github.com/svenpanne/HSuperBible7.git
